--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
         <title>与贝贝聊天中</title>
         <link href="css/main.min.css" rel="stylesheet" type="text/css">
         <link rel="Shortcut Icon" href="favicon.ico"/>
-        <link rel="preload" href="img/love-the-girl.jpg" as="image">
-        <link rel="preload" href="img/news-wuhanfeiyan.jpg" as="image">
-        <link rel="preload" href="img/separate.jpeg" as="image">
-        <link rel="preload" href="img/in-sichuan.jpeg" as="image">
-        <link rel="preload" href="img/lucky-me.jpg" as="image">
-        <link rel="preload" href="img/breakfast.jpg" as="image">
-        <link rel="preload" href="img/exercise-together.jpg" as="image">
-        <link rel="preload" href="img/travel.jpg" as="image">
-        <link rel="preload" href="img/foot.jpg" as="image">
-        <link rel="preload" href="img/marry-me.png" as="image">
-        <link rel="preload" href="img/kiss-my-princess.png" as="image">
+        <link rel="preload" href="img/1.jpg" as="image">
+        <link rel="preload" href="img/2.jpg" as="image">
+        <link rel="preload" href="img/3.jpg" as="image">
+        <link rel="preload" href="img/4.jpg" as="image">
+        <link rel="preload" href="img/5.jpg" as="image">
+        <link rel="preload" href="img/6.jpg" as="image">
+        <link rel="preload" href="img/7.jpg" as="image">
+        <link rel="preload" href="img/8.jpg" as="image">
+        <link rel="preload" href="img/9.jpg" as="image">
     </head>
     <body>
         <div id="mobile" :class="{ 'has-prompt': hasPrompt }">
